# EShot

./: .gitignore  CMakeLists.txt  EShot-Linux.desktop  EShot_Setup.iss  LICENSE  LINUX_DEPENDENCY_SETUP.md  README.md  codes.txt
.github/workflows/: build.yml  publish-aur.yml
docs/: linux-port-test.md
docs/superpowers/plans/: 2026-07-10-linux-native-appimage.md  2026-07-10-mixed-dpi-recording-rect.md  2026-07-12-kde-print-screen.md  2026-07-12-linux-release-visual-search.md  2026-07-13-capture-annotation-polish.md  2026-07-13-kde-icon-cursor-fixes.md  2026-07-13-linux-appimage-autostart.md  2026-07-13-linux-media-fixes.md  2026-07-16-windows-window-snap-and-audio-defaults-plan.md
docs/superpowers/specs/: 2026-07-10-linux-native-appimage-design.md  2026-07-11-source-desktop-launcher-design.md  2026-07-12-kde-print-screen-design.md  2026-07-12-linux-release-visual-search-design.md  2026-07-13-capture-annotation-polish-design.md  2026-07-13-kde-icon-cursor-fixes-design.md  2026-07-13-linux-appimage-autostart-design.md  2026-07-13-linux-media-fixes-design.md  2026-07-16-windows-window-snap-and-audio-defaults-design.md
packaging/aur/eshot-bin/: PKGBUILD  eshot
packaging/linux/: AppRun  io.github.benoks.EShot.desktop  io.github.benoks.EShot.metainfo.xml
packaging/release-notes/: v4.0.4.md  v4.0.5.md  v4.0.6.md  v4.0.7.md  v4.0.8.md  v4.0.9.md  v4.1.0.md  v4.1.1.md  v4.1.2.md  v4.1.3.md
resources/: icons.qrc  resources.qrc  style.qss
scripts/linux/: apply-release-version.sh  build-appimage.sh  build-linux.sh  check-linux-runtime.sh  desktop-launch.sh  eshot-launcher  install-cachyos-deps.sh  install-runtime-deps.sh  install-ubuntu-deps.sh  install-user.sh  package-linux.sh  packagekit-install.sh  qmake-appimage-wrapper.sh  qt-plugin-dir.sh  run-linux.sh  runtime-common.sh  update-aur-package.sh  verify-appimage-portability.sh  verify-linux.sh
src/: main.cpp
src/annotation/: AnnotationEngine.cpp  AnnotationEngine.h
src/capture/: CaptureGeometry.cpp  CaptureGeometry.h  CaptureInteractionPolicy.cpp  CaptureInteractionPolicy.h  CaptureOverlay.cpp  CaptureOverlay.h  PinnedWindow.cpp  PinnedWindow.h  WindowSnapPolicy.cpp  WindowSnapPolicy.h  WindowsWindowProvider.cpp  WindowsWindowProvider.h
src/core/: ApplicationInstanceCommand.cpp  ApplicationInstanceCommand.h  CatboxUploader.cpp  CatboxUploader.h  HotkeyManager.cpp  HotkeyManager.h  ImageUploader.cpp  ImageUploader.h  ImgurUploader.cpp  LinuxAutoStartPolicy.cpp  LinuxAutoStartPolicy.h  LinuxDependencySelection.cpp  LinuxDependencySelection.h  LinuxDesktopIntegration.cpp  LinuxDesktopIntegration.h  LinuxDesktopNotification.cpp  LinuxDesktopNotification.h  LinuxGnomeShortcutInstaller.cpp  LinuxGnomeShortcutInstaller.h  LinuxKGlobalAccelShortcuts.cpp  LinuxKGlobalAccelShortcuts.h  LinuxPortalGlobalShortcuts.cpp  LinuxPortalGlobalShortcuts.h  LinuxPortalHostRegistry.cpp  LinuxPortalHostRegistry.h  LinuxPortalRequest.cpp  LinuxPortalRequest.h  LinuxPortalScreenCast.cpp  LinuxPortalScreenCast.h  LinuxPortalScreenshot.cpp  LinuxPortalScreenshot.h  LinuxScreenshotPolicy.cpp  LinuxScreenshotPolicy.h  LinuxUpdateScript.cpp  LinuxUpdateScript.h  NotificationFolderOpener.cpp  NotificationFolderOpener.h  OcrEngine.cpp  OcrEngine.h  OcrLanguageSelector.cpp  (+15 more)
src/recording/: LinuxRecordingSupport.cpp  LinuxRecordingSupport.h  RecordingControlLayout.cpp  RecordingControlLayout.h  RecordingIndicator.cpp  RecordingIndicator.h  RecordingSettingsPolicy.cpp  RecordingSettingsPolicy.h  RecordingTimeline.cpp  RecordingTimeline.h  ScreenRecorder.cpp  ScreenRecorder.h  VideoRecorder.cpp  VideoRecorder.h
src/ui/: AboutDialog.cpp  AboutDialog.h  AnnotationToolbar.cpp  AnnotationToolbar.h  ApplicationTheme.cpp  ApplicationTheme.h  FirstRunWizard.cpp  FirstRunWizard.h  OcrDialog.cpp  OcrDialog.h  SettingsDialog.cpp  SettingsDialog.h  SettingsHotkeyPolicy.cpp  SettingsHotkeyPolicy.h  SettingsLayoutPolicy.cpp  SettingsLayoutPolicy.h  UploadDialog.cpp  UploadDialog.h
tests/: AboutDialogTests.cpp  ApplicationInstanceCommandTests.cpp  ApplicationThemeTests.cpp  CaptureGeometryTests.cpp  CaptureInteractionPolicyTests.cpp  LinuxAutoStartPolicyTests.cpp  LinuxDependencySelectionTests.cpp  LinuxDesktopNotificationTests.cpp  LinuxGnomeShortcutInstallerTests.cpp  LinuxPortalShortcutTests.cpp  LinuxRecordingSupportTests.cpp  LinuxScreenshotPolicyTests.cpp  LinuxUpdateScriptTests.cpp  NotificationFolderOpenerTests.cpp  OcrLanguageSelectorTests.cpp  RecordingControlLayoutTests.cpp  RecordingIndicatorTests.cpp  RecordingSettingsPolicyTests.cpp  RecordingTimelineTests.cpp  ScreenRecorderPauseApiTests.cpp  SettingsHotkeyPolicyTests.cpp  SettingsLayoutPolicyTests.cpp  SettingsTranslationTests.cpp  UpdateAssetSelectorTests.cpp  UploadResponseParserTests.cpp  VisualSearchTests.cpp  WindowSnapPolicyTests.cpp
tests/linux/: apprun-integration-tests.sh  aur-package-contract-tests.sh  package-contract-tests.sh  packagekit-installer-tests.sh  runtime-common-tests.sh
